--- a/static/index.html
+++ b/static/index.html
@@ -77,20 +77,39 @@
                 attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
             }).addTo(map);
             let markers = {};
-            fetch("/api/db/latest")
-                .then(response => response.json())
-                .then(data => {
-                    data.forEach(airtag => {
-                        const marker = L.circleMarker([airtag.latitude, airtag.longitude], {
-                            radius: 5,
-                            weight: 1,
-                            opacity: 1,
-                            fillOpacity: 0.8,
-                            stroke: true,
-                        }).addTo(map);
-                        marker.bindPopup(`<h1>${airtag.name}</h1><p>Address: ${airtag.address}</p><p>Last seen ${airtag.ago}</p>`);
-                        markers[airtag.id] = marker;
+            let group = L.featureGroup();
+            function updateMarkers() {
+                fetch('/api/db/latest')
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data);
+                        data.forEach(airtag => {
+                            const marker = markers[airtag.id];
+                            if (marker) {
+                                marker.setLatLng([airtag.latitude, airtag.longitude]);
+                                marker.setPopupContent(`
+                                    <h2>${airtag.name}</h2>
+                                    <p>${airtag.address}</p>
+                                    <p>${airtag.ago}</p>
+                                `);
+                            } else {
+                                markers[airtag.id] = L.marker([airtag.latitude, airtag.longitude]).addTo(map)
+                                    .bindPopup(`
+                                        <h2>${airtag.name}</h2>
+                                        <p>${airtag.address}</p>
+                                        <p>${airtag.ago}</p>
+                                    `);
+                                group.addLayer(markers[airtag.id]);
+                            }
+                        });
                     })
-                });
+                    .then(() => {
+                        map.fitBounds(group.getBounds());
+                    });
+                let timer = setInterval(() => {
+                    updateMarkers();
+                }, 10000);
+            };
+            updateMarkers();
         </script>
     </div>
