--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,7 @@
             <h1>TrackMyAirtag</h1>
             <p style="display:inline">Last updated:</p>
             <p style="display:inline" id="lastUpdated"></p>
+            <input type="checkbox" id="centered" name="centered" value="1">
         </div>
         <div id="airtags">
             <hr>
@@ -118,7 +119,9 @@
                         });
                     })
                     .then(() => {
-                        map.fitBounds(group.getBounds());
+                        if (document.getElementById('centered').checked) {
+                            map.fitBounds(group.getBounds());
+                        }
                     })
                     .then(() => {
                         document.getElementById('lastUpdated').innerHTML = new Date().toLocaleString();
