fix(tags): add missing close tags

--- a/static/track.html
+++ b/static/track.html
@@ -13,7 +13,6 @@
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
         integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
 </head>
-
 <body>
     <div class="left">
         <div class="center">
@@ -154,3 +153,5 @@
 
         </script>
     </div>
+</body>
+</html>
