refactor(list): rename #devices in #devices-list

--- a/static/index.html
+++ b/static/index.html
@@ -15,9 +15,9 @@
         integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
 </head>
 <body>
-    <div id="devices">
+    <div id="devices-list">
         <h1>Tous mes appareils</h1>
-        <ul id="airtags"></ul>
+        <ul id="devices"></ul>
     </div>
     <div class="map" id="map" style="height: 100%; width: 100%;"></div>
     <script src="static/track.js" lang="text/javascript"></script>
