refactor(directories): move css files into a stylesheets directory

--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>TrackMyAirtag</title>
-    <link rel="stylesheet" href="static/reset.css">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/stylesheets/reset.css">
+    <link rel="stylesheet" href="static/stylesheets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
         integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
