feat(visibility): add a button to toggle all devices visibility

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,10 @@
 </head>
 <body>
     <div id="devices-list">
-        <h1>Tous mes appareils</h1>
+        <header>
+            <h1>Tous mes appareils</h1>
+            <img src="static/icons/eye.fill.svg" aria-hidden="true" id="toggle-visibility" title="Afficher / Masquer tout">
+        </header>
         <ul id="devices"></ul>
     </div>
     <div class="map" id="map" style="height: 100%; width: 100%;"></div>
