--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>TrackMyAirtag</title>
+    <title>trackmyairtag</title>
     <link rel="stylesheet" href="static/stylesheets/reset.css">
     <link rel="stylesheet" href="static/stylesheets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -17,8 +17,8 @@
 <body>
     <div id="devices-list">
         <header>
-            <h1>Tous mes appareils</h1>
-            <img src="static/icons/eye.fill.svg" aria-hidden="true" id="toggle-visibility" title="Afficher / Masquer tout">
+            <h1>all devices</h1>
+            <img src="static/icons/eye.fill.svg" aria-hidden="true" id="toggle-visibility" title="show/hide">
         </header>
         <ul id="devices"></ul>
     </div>
