--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>trackmyairtag</title>
-    <link rel="stylesheet" href="static/stylesheets/reset.css">
-    <link rel="stylesheet" href="static/stylesheets/style.css">
+    <link rel="stylesheet" href="static/reset.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
         integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
@@ -17,7 +17,7 @@
 <body>
     <div id="devices-list">
         <header>
-            <h1>all devices</h1>
+            <h1>trackmyairtag</h1>
             <img src="static/icons/eye.fill.svg" aria-hidden="true" id="toggle-visibility" title="show/hide">
         </header>
         <ul id="devices"></ul>
